# terminalizer2asciinema

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/scripts/: qlty-coverage-publish.sh
.github/workflows/: build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-qltysh.yml  quality-sonarcloud.yml
